New Updates as at 02/23/2020

--- a/src/main/webapp/pages/extension_officer/extension_officer.xhtml
+++ b/src/main/webapp/pages/extension_officer/extension_officer.xhtml
@@ -17,7 +17,12 @@ and open the template in the editor.
                 <title>AeHS - Extension Offices</title>
             </ui:define>
 
+            <ui:define name="content-title">
+                <h1 class="mt-4">Extension Officer</h1>
+            </ui:define>
+
             <ui:define name="sysad_feature"></ui:define>
+            <ui:define name="sysad_register_user"></ui:define>
 
         </ui:composition>
     </h:body>
