--- a/src/main/webapp/401.html
+++ b/src/main/webapp/401.html
@@ -7,7 +7,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>404 Error - AeHS</title>
-        <link href="./resources/css/styles.css" rel="stylesheet" />
+        <link href="/AeHS/resources/css/styles.css" rel="stylesheet" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.min.js" crossorigin="anonymous"></script>
     </head>
     <body>
@@ -21,7 +21,7 @@
                                     <h1 class="display-1">401</h1>
                                     <p class="lead">Unauthorized</p>
                                     <p>Access to this resource is denied.</p>
-                                    <a href="index.xhtml"><i class="fas fa-arrow-left mr-1"></i>Return to Login</a>
+                                    <a href="/AeHS"><i class="fas fa-arrow-left mr-1"></i>Return to Login</a>
                                 </div>
                             </div>
                         </div>
@@ -45,6 +45,6 @@
         </div>
         <script src="https://code.jquery.com/jquery-3.4.1.min.js" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-        <script src="./resources/js/scripts.js" defer></script>
+        <script src="/AeHS/resources/js/scripts.js" defer></script>
     </body>
 </html>
