--- a/src/main/webapp/500.html
+++ b/src/main/webapp/500.html
@@ -7,7 +7,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>404 Error - AeHS</title>
-        <link href="./resources/css/styles.css" rel="stylesheet" />
+        <link href="/AeHS/resources/css/styles.css" rel="stylesheet" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.min.js" crossorigin="anonymous"></script>
     </head>
     <body>
@@ -20,7 +20,7 @@
                                 <div class="text-center mt-4">
                                     <h1 class="display-1">500</h1>
                                     <p class="lead">Internal Server Error</p>
-                                    <a href="index.xhtml"><i class="fas fa-arrow-left mr-1"></i>Return to Login</a>
+                                    <a href="/AeHS"><i class="fas fa-arrow-left mr-1"></i>Return to Login</a>
                                 </div>
                             </div>
                         </div>
@@ -44,6 +44,6 @@
         </div>
         <script src="https://code.jquery.com/jquery-3.4.1.min.js" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-        <script src="./resources/js/scripts.js" defer></script>
+        <script src="/AeHS/resources/js/scripts.js" defer></script>
     </body>
 </html>
