new chages as at 02/24/2020

--- a/src/main/webapp/pages/extension_officer/extension_officer.xhtml
+++ b/src/main/webapp/pages/extension_officer/extension_officer.xhtml
@@ -7,14 +7,23 @@ and open the template in the editor.
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </h:head>
+    <f:metadata>
+        <f:event listener="#{userAuthentication.isLoggedIn}" type="preRenderView"/> 
+        <f:event listener="#{userAuthentication.checkIsUser}" type="preRenderView"/> 
+    </f:metadata>
     <h:body>
         <ui:composition template="./../../resources/templates/main_template.xhtml">
             <ui:define name="title">
                 <title>AeHS - Extension Offices</title>
+            </ui:define>
+
+            <ui:define name="screenName">
+                #{userAccessController.loginUsername}
             </ui:define>
 
             <ui:define name="content-title">
