--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -7,7 +7,8 @@ and open the template in the editor.
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:pt="http://xmlns.jcp.org/jsf/passthrough">
+      xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
+      xmlns:p="http://primefaces.org/ui">
     <h:head>
         <title>AeHS - Login</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -21,6 +22,11 @@ and open the template in the editor.
                 <main>
                     <div class="container">
                         <div class="row justify-content-center">
+                            <div class="col-md-8">
+                                <div>
+                                    <p:messages id="messages" showDetail="true" autoUpdate="true" globalOnly="true"/>
+                                </div>
+                            </div>
                             <div class="col-lg-5">
                                 <div class="card shadow-lg border-0 rounded-lg mt-5">
                                     <div class="card-header"><h3 class="text-center font-weight-light my-4">Login</h3></div>
