--- a/src/main/webapp/pages/register_farm_details.xhtml
+++ b/src/main/webapp/pages/register_farm_details.xhtml
@@ -7,7 +7,9 @@ and open the template in the editor.
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:pt="http://xmlns.jcp.org/jsf/passthrough">
     <head>
         <title>TODO supply a title</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -19,44 +21,46 @@ and open the template in the editor.
                     <li class="breadcrumb-item active">Register Farm Details</li>
                 </ol>
 
-                <h:panelGroup layout="block" class="row">
-                    <div class="col-xl-3 col-md-6">
-                        <div class="card bg-primary text-white mb-4">
-                            <div class="card-body">Primary Card</div>
-                            <div class="card-footer d-flex align-items-center justify-content-between">
-                                <a class="small text-white stretched-link" href="#">View Details</a>
-                                <div class="small text-white"><i class="fas fa-angle-right"></i></div>
-                            </div>
+                <div class="form-row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label class="small mb-1" for="inputFirstName">Farm Name</label>
+                            <h:inputText id="farmName" styleClass="form-control" pt:placeholder="Enter something pls"/>
                         </div>
                     </div>
-                    <div class="col-xl-3 col-md-6">
-                        <div class="card bg-warning text-white mb-4">
-                            <div class="card-body">Warning Card</div>
-                            <div class="card-footer d-flex align-items-center justify-content-between">
-                                <a class="small text-white stretched-link" href="#">View Details</a>
-                                <div class="small text-white"><i class="fas fa-angle-right"></i></div>
-                            </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label class="small mb-1" for="inputFirstName">Farm Owner</label>
+                            <!--<h:inputText id="inputparam3" styleClass="form-control py-4" pt:placeholder="Enter something pls"/>-->
+                            <h:selectOneMenu styleClass="form-control" id="farmOwner">
+                                <f:selectItems value="#{commonOptions.systemUsersOptions}"/>
+                            </h:selectOneMenu>
                         </div>
                     </div>
-                    <div class="col-xl-3 col-md-6">
-                        <div class="card bg-success text-white mb-4">
-                            <div class="card-body">Success Card</div>
-                            <div class="card-footer d-flex align-items-center justify-content-between">
-                                <a class="small text-white stretched-link" href="#">View Details</a>
-                                <div class="small text-white"><i class="fas fa-angle-right"></i></div>
-                            </div>
+
+                </div>
+                <div class="form-row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label class="small mb-1" for="inputLastName">Main Plantation</label>
+                            <!--<h:inputText id="farmLName" styleClass="form-control" pt:placeholder="Enter something pls"/>-->
+                            <h:inputTextarea rows="3" styleClass="form-control" pt:placeholder="Enter something pls" id="farmPlants" />
                         </div>
                     </div>
-                    <div class="col-xl-3 col-md-6">
-                        <div class="card bg-danger text-white mb-4">
-                            <div class="card-body">Danger Card</div>
-                            <div class="card-footer d-flex align-items-center justify-content-between">
-                                <a class="small text-white stretched-link" href="#">View Details</a>
-                                <div class="small text-white"><i class="fas fa-angle-right"></i></div>
-                            </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label class="small mb-1" for="inputLastName">Location</label>
+                            <h:inputTextarea rows="3" styleClass="form-control" pt:placeholder="Enter something pls" id="farmLocation" />
                         </div>
                     </div>
-                </h:panelGroup>
+                </div>
+
+                <center>
+                    <div class="form-group mt-4 mb-0">
+                        <h:commandButton styleClass="btn btn-primary" style="width: 70%" value="Register Farmer"/>
+                    </div>
+                </center>
+
             </h:form>
         </ui:composition>
     </body>
